# PythonCode

./: README.md
ImpracticalPython/chapter2/: palindromes.py
ParsersCollection/: README.md  pyproject.toml
ParsersCollection/src/PythonWebScrapingTutorial/: Lxml&Request.py  Request&BeautifulSoup.py  Request&BeautifulSoup2.py  Request.py  Selenium.py  pyautoguiDemo.py  scheduleDemo.py  urllibDemo.py
ParsersCollection/src/bunchOfparsers/by_limonsafayet/: README.md
ParsersCollection/src/geeksforgeeks/ScrapeContentfromDynamicWebsites/: main.py
ParsersCollection/src/scrapingbee/: README.md  main1.py
PythonCookBook/: README.md
PythonCookBook/chapter1/: 1.1.py  1.2.py  1.3.py  1.4.py  1.5.py  README.md
WinMine/: main.py
curses/: main1.py  main2.py  main4.py
python/GeneratorKey/: Main.py
python/simpleCalculator/: main.py
python/watch-_timer_and_stopwatch/: clock.py
simpleTimer/: main.py
telegrambot/python-telegram-bot/: private.key
telegrambot/python-telegram-bot/arbitrarycallbackdatabot/: ArbitraryCallbackDataBot.py
telegrambot/python-telegram-bot/chatmemberbot/: ChatMemberBot.py
telegrambot/python-telegram-bot/contexttypesbot/: ContextTypesBot.py
telegrambot/python-telegram-bot/conversationBot/: ConversationBot.py
telegrambot/python-telegram-bot/conversationBot2/: ConversationBot2.py
telegrambot/python-telegram-bot/deeplinking/: DeepLinking.py
telegrambot/python-telegram-bot/echobot/: echobot.py
telegrambot/python-telegram-bot/errorhandlerbot/: ErrorHandlerBot.py
telegrambot/python-telegram-bot/firstbot/: firstbot.py
(+11 files in other folders)
