[project]
name = "parserscollection"
version = "0.1.0"
description = ""
authors = [
    {name = "arsyhiy",email = "arsyhiy32@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenv]
in-project = true
